--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "task-manager-evolved",
+  "name": "fortnite-todo-list",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +7,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
