--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
     "react": "^18.2.0",
-    "react-audio-player": "^0.17.0",
+    "react-audio-brotha": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
